<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TelaCalc">

    <ImageView
        android:id="@+id/barra3"
        android:layout_width="50dp"
        android:layout_height="31dp"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.512"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.421"
        app:srcCompat="@drawable/image_removebg_preview__2_" />

    <TextView
        android:id="@+id/txtMais4"
        android:layout_width="26dp"
        android:layout_height="35dp"
        android:text="@string/txtUM"
        android:textAlignment="center"
        android:visibility="invisible"
        android:textColor="#000000"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.807"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.418" />

    <EditText
        android:id="@+id/c4"
        android:layout_width="33dp"
        android:layout_height="41dp"
        android:ems="10"
        android:hint="@string/C4"
        android:inputType="number|numberDecimal"
        android:textAlignment="center"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.711"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.378" />

    <EditText
        android:id="@+id/c3"
        android:layout_width="33dp"
        android:layout_height="41dp"
        android:ems="10"
        android:hint="@string/C3"
        android:inputType="number|numberDecimal"
        android:textAlignment="center"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.513"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.378" />

    <TextView
        android:id="@+id/txtMais2"
        android:layout_width="26dp"
        android:layout_height="35dp"
        android:text="@string/txtUM"
        android:visibility="invisible"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.405"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.418" />

    <EditText
        android:id="@+id/c5"
        android:layout_width="33dp"
        android:layout_height="41dp"
        android:ems="10"
        android:hint="@string/C5"
        android:inputType="number|numberDecimal"
        android:textAlignment="center"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.917"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.378" />

    <EditText
        android:id="@+id/t5"
        android:layout_width="33dp"
        android:layout_height="41dp"
        android:ems="10"
        android:hint="@string/T5"
        android:visibility="invisible"
        android:inputType="number|numberDecimal"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.917"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.45" />

    <EditText
        android:id="@+id/t4"
        android:layout_width="33dp"
        android:layout_height="41dp"
        android:ems="10"
        android:hint="@string/T4"
        android:visibility="invisible"
        android:inputType="number|numberDecimal"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.711"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.453" />

    <TextView
        android:id="@+id/txtMais1"
        android:layout_width="26dp"
        android:layout_height="35dp"
        android:text="@string/txtUM"
        android:visibility="invisible"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.207"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.418" />

    <ImageView
        android:id="@+id/barra4"
        android:layout_width="50dp"
        android:layout_height="31dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.722"
        android:visibility="invisible"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.421"
        app:srcCompat="@drawable/image_removebg_preview__2_" />

    <EditText
        android:id="@+id/c2"
        android:layout_width="33dp"
        android:layout_height="41dp"
        android:ems="10"
        android:hint="@string/C2"
        android:inputType="number|numberDecimal"
        android:textAlignment="center"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.301"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.378" />

    <ImageView
        android:id="@+id/barra1"
        android:layout_width="50dp"
        android:layout_height="31dp"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.083"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.421"
        app:srcCompat="@drawable/image_removebg_preview__2_" />

    <ImageView
        android:id="@+id/barra2"
        android:layout_width="50dp"
        android:layout_height="31dp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.293"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.421"
        app:srcCompat="@drawable/image_removebg_preview__2_" />

    <EditText
        android:id="@+id/t1"
        android:layout_width="33dp"
        android:layout_height="41dp"
        android:ems="10"
        android:hint="@string/T1"
        android:visibility="invisible"
        android:inputType="number|numberDecimal"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.103"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.453" />

    <EditText
        android:id="@+id/c1"
        android:layout_width="33dp"
        android:layout_height="41dp"
        android:ems="10"
        android:hint="@string/C1"
        android:inputType="number|numberDecimal"
        android:textAlignment="center"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.103"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.378" />

    <TextView
        android:id="@+id/txtMais3"
        android:layout_width="26dp"
        android:layout_height="35dp"
        android:visibility="invisible"
        android:text="@string/txtUM"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.61"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.418" />

    <EditText
        android:id="@+id/t2"
        android:layout_width="33dp"
        android:layout_height="41dp"
        android:ems="10"
        android:visibility="invisible"
        android:hint="@string/T2"
        android:inputType="number|numberDecimal"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.301"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.453" />

    <ImageView
        android:id="@+id/barra5"
        android:layout_width="50dp"
        android:layout_height="31dp"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.933"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.421"
        app:srcCompat="@drawable/image_removebg_preview__2_" />

    <EditText
        android:id="@+id/t3"
        android:layout_width="33dp"
        android:layout_height="41dp"
        android:ems="10"
        android:hint="@string/T3"
        android:inputType="number|numberDecimal"
        android:visibility="invisible"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.513"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.453" />

    <TextView
        android:id="@+id/txt2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#A10303"
        android:textSize="24sp"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.396"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.103" />

    <Button
        android:id="@+id/button1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txtDois"
        android:background="#ffbb2f"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.592" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="143dp"
        android:layout_height="37dp"
        android:text="@string/Resultado"
        android:textColor="#000000"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.111"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.103" />

    <TextView
        android:id="@+id/riS"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#000000"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.45"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.154" />

</androidx.constraintlayout.widget.ConstraintLayout>