<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    tools:layout_editor_absoluteX="49dp"
    tools:layout_editor_absoluteY="56dp">


    <NumberPicker
        android:id="@+id/numberPicker"
        android:layout_width="72dp"
        android:layout_height="241dp"
        app:layout_constraintBottom_toBottomOf="@+id/dosime"
        app:layout_constraintEnd_toEndOf="@+id/dosime"
        app:layout_constraintHorizontal_bias="0.507"
        app:layout_constraintStart_toStartOf="@+id/dosime"
        app:layout_constraintTop_toTopOf="@+id/dosime"
        app:layout_constraintVertical_bias="0.409" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#0000FF"
        android:textSize="26sp"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.3"
        tools:visibility="visible" />

    <ImageView
        android:id="@+id/dosime"
        android:layout_width="352dp"
        android:layout_height="463dp"
        android:contentDescription="@string/doSimetro"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.593"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.23"
        app:srcCompat="@drawable/image_removebg_preview__1_" />

    <Button
        android:id="@+id/btnOutraTela"
        style="@android:style/Widget.Material.Button.Toggle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#ffbb2f"
        android:text="@string/btnOutraTela"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/dosime"
        app:layout_constraintHorizontal_bias="0.575"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.838" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Calculo"
        android:textColor="#000000"
        android:textSize="24sp"
        android:textStyle="bold|italic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.512"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.06" />

</androidx.constraintlayout.widget.ConstraintLayout>